<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/form"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/firstName"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/firstName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/lastName"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/lastName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="Male" />

        <RadioButton
        android:id="@+id/female"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="Female" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/subject"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/mern"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:text="MERN" />
    <CheckBox
        android:id="@+id/python"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:text="Python" />
    <CheckBox
        android:id="@+id/java"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:text="JAVA" />


    <Spinner
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:dropDownSelector="@android:color/holo_orange_light"
        android:dropDownWidth="match_parent"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUBMIT"/>


</LinearLayout>